# ipchess

./: LICENSE  README.md
app/: .gitignore  .parcelrc  .prettierrc  Makefile  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json
app/src/assets/pieces/: credit.txt
app/src/lib/: index.ts
app/src/main/: index.ts  jsonrpc.ts  state.ts
app/src/renderer/: index.html  index.tsx  router.tsx  state.ts  style.css  tailwind.css
app/src/renderer/components/: Board.tsx  pieces.tsx
app/src/renderer/pages/: Home.tsx  Match.tsx  Splash.tsx
daemon/: .gitignore  Cargo.toml  Makefile  build.rs  go.mod  go.sum
daemon/api/: api.go  rpc.go
daemon/cmd/: main.go
daemon/cmd/commands/: daemon.go
daemon/cmd/daemon/: main.go
daemon/p2p/: challenge.go  host.go  match.go  net.go  p2p.go
daemon/proto/: ipchess.proto  phess.proto
daemon/src/: api.rs  behaviour.rs  main.rs  protocol.rs  utils.rs
daemon/src/protocol/: behaviour.rs  handler.rs  ipchess.proto  ipchessproto.rs
